[package]
name = "keller-ld"
version = "0.1.0"
edition = "2021"

[dependencies]

embedded-hal = "1.0.0-rc.2"
defmt = "0.3"

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0-rc.3", features = ["eh1"] }
float_eq = "1.0"
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal/" }

